@@ -49,6 +49,7 @@ Version 1.3.rc1 (2011-??-??)
 - Improved: make arrCache data available in product template (#2340)
 - Improved: Duplicating a product will sort it at the bottom of a category (#2618)
 - Improved: Now generates an error message if a coupon code could not be applied
+- Improved: Can now multi-edit all features of a product. Can not multi-edit variants anymore (#2209)
 - Fixed: radio button events in Internet Explorer (Ticket #484)
 - Fixed: products DCA not loaded in rare cases
 - Fixed: hide customer definied fields in product edit mode
